VeraSandBox2016/src/objects/Trip__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <formula>IF( (Departure_Date__c&lt;= TODAY() ) &amp;&amp; (Return_Date__c&gt;= TODAY() ) , true, false)</formula>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Trips</relationshipLabel>
        <relationshipName>Trips</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country_Visited__c</fullName>
        <label>Country Visited</label>
        <picklist>
            <picklistValues>
                <fullName>Insert Universal Country List</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Coverage__c</fullName>
        <inlineHelpText>Med = Medical coverage (used for Trainings)
Med-LI = Medical + Life insurance (No security; used for missions)
Med-LI-SEC = Medical + Life insurance + Security coverage (used for missions)</inlineHelpText>
        <label>Coverage</label>
        <picklist>
            <picklistValues>
                <fullName>Med</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Med-LI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Med-LI-SEC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Declaration_Send_Date__c</fullName>
        <label>Declaration Send Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Declaration_Sent__c</fullName>
        <label>Declaration Sent</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <picklist>
            <picklistValues>
                <fullName>T</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Departure_Company_and_Flight_Number__c</fullName>
        <label>Departure - Company and Flight Number</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Departure_Date__c</fullName>
        <label>Departure Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Flight_Cost_Amount__c</fullName>
        <label>Flight Cost Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Flight_Cost_Currency__c</fullName>
        <label>Flight Cost Currency</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flight_Paid_by_JRR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Flight Paid by JRR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JRR_Insurance__c</fullName>
        <label>JRR Insurance</label>
        <picklist>
            <picklistValues>
                <fullName>TBA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mission__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mission</label>
        <referenceTo>Mission__c</referenceTo>
        <relationshipLabel>Trips</relationshipLabel>
        <relationshipName>Trips</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Name_Address_of_Accommodation_Location__c</fullName>
        <label>Name &amp; Address of Accommodation Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Days__c</fullName>
        <formula>Return_Date__c - Departure_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Passport_Number__c</fullName>
        <label>Passport Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Return_Company_Flight_Number__c</fullName>
        <label>Return - Company &amp; Flight Number</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Return_Date__c</fullName>
        <label>Return Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Training__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Training</label>
        <referenceTo>Training__c</referenceTo>
        <relationshipLabel>Trips</relationshipLabel>
        <relationshipName>Trips</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Trip</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TRI-{00000}</displayFormat>
        <label>JRRID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trips</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Training_or_Mission_if_not_Admin</fullName>
        <active>true</active>
        <description>Trip must be related to a Training OR a Mission if it&apos;s not an Admin incident</description>
        <errorConditionFormula>OR( 
AND( 
ISPICKVAL( Department__c , &apos;T&apos;), 
AND( 
ISBLANK( Mission__c ), ISBLANK(Training__c) 
) 
) 
, 
AND( 
ISPICKVAL( Department__c , &apos;M&apos;), 
AND(ISBLANK( Mission__c ), ISBLANK(Training__c) 
) 
) 
)</errorConditionFormula>
        <errorDisplayField>Department__c</errorDisplayField>
        <errorMessage>If Department is not Admin, please relate this Trip to a Mission or a Training</errorMessage>
    </validationRules>
</CustomObject>